--- a/fitnesstrackertest-Gradle/src/main/resources/templates/displaySignInPage.html
+++ b/fitnesstrackertest-Gradle/src/main/resources/templates/displaySignInPage.html
@@ -9,53 +9,43 @@
 	<title>Log In Page</title>
 	<script>
 		setTimeout(function(){
-			var messageBox=document.getElementById("message-box");
+			let messageBox=document.getElementById("message-box");
 			messageBox.innerText="";
-			
 		},3000);
-		
 	</script>
 	<style>
 		* {
 			margin: 0;
 			padding: 0;
-
 			box-sizing: border-box;
 			font-family: 'Oswald', sans-serif;
 		}
-
 		#container {
 			position: relative;
 			width: 100%;
 			height: 100vh;
-			background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Images/e8.jpg);
+			background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(FitnessTrackerTest-Images/SingIn-Background-Img.jpg);
 			background-position: center;
 			background-size: cover;
-
 		}
-
 		#form-box {
 			position: absolute;
 			width: 90%;
 			max-width: 450px;
-
 			top: 50%;
 			left: 50%;
 			background-color: #fff;
-			padding: 50px 60px 70px;
+			padding: 28px 60px 28px;
 			text-align: center;
 			transform: translate(-50%, -50%);
 		}
-
 		#form-box h1 {
 			font-size: 30px;
 			color: #fe7250;
 			font-weight: 700;
 			margin-bottom: 2px;
 			margin-top: -10px;
-
 		}
-
 		#underline-box {
 			height: 2px;
 			display: block;
@@ -63,23 +53,18 @@
 			margin: 2px auto 20px;
 			padding: 0;
 			border: 2px solid #fe7250;
-
 		}
-
 		#input-field {
 			/*have colored the whole div light grey*/
 			background: #eaeaea;
-			margin: 15px 0;
+			margin: 18px 0;
 			border-radius: 3px;
 			display: flex;
 			align-items: center;
 			max-height: 65px;
 			overflow: hidden;
 			transition: all 0.8s;
-
-
 		}
-
 		input {
 			width: 100%;
 			/* can aslo give same color as input-field*/
@@ -88,42 +73,38 @@
 			outline: 0;
 			padding: 18px 15px;
 		}
-
 		#input-field i {
 			margin-left: 15px;
 			color: #999;
 		}
-
 		form p {
 			text-align: left;
 			font-size: 13px;
 		}
-
 		form a {
 			text-decoration: none;
 			color: #3c00a0;
-
 		}
-
 		form a:hover {
 			color: Red;
 		}
-
-		#forgetPassword {
+		#forget-password {
 			margin-top: -2px;
 		}
-
 		#buttonGrp {
 			margin-top: 0px;
 		}
-
 		#message-box {
-			margin-top: 19px;
+			margin-top:8px;
 			color:orangered;
-			font-size:14px;
+			font-size:12px;
+			font-weight:bold;
+			height:14px;
 		}
-
-		#signInButton {
+		#buttonGrp{
+			height:10%;
+		}
+		#signin-btn {
 			background: #fe7250;
 			color: #fff;
 			height: 45px;
@@ -137,35 +118,24 @@
 			margin-top: 40px;
 			transition: all ease-in-out 1s;
 		}
-
-		#signInButton :hover {
-
+		#signin-btn :hover {
 			background: rgba(254, 114, 80, 0.2);
 		}
-
-	
-
-		#SignUpLink {
+		#sing-up-link {
 			margin: 8px auto;
 		}
-
-		#SignUpLink p {
+		#sing-up-link p {
 			font-weight: normal;
 			font-size: 14px;
-
 		}
-
-		#SignUpLink a {
+		#sing-up-link a {
 			text-decoration: none;
 		}
-
-		#SignUpLink a:hover {
+		#sing-up-link a:hover {
 			color: #fe7250;
-
 		}
 	</style>
 </head>
-
 <body>
 	<div id="container">
 		<div id="form-box">
@@ -181,23 +151,18 @@
 						<i class="fa-solid fa-lock"></i>
 						<input type="password" placeholder="Password" name="password" required>
 					</div>
-					<p id="forgetPassword">Forgot Password? <a href="#">Click Here!</a>
+					<p id="forget-password">Forgot Password? <a href="#">Click Here!</a>
 					</p>
-
 				</div>
 				<div id="message-box" th:text="${msg}"></div>
 				<div id="buttonGrp">
-					<input type="submit" value="Sign In" id="signInButton">
+					<input type="submit" value="Sign In" id="signin-btn">
 				</div>
 			</form>
-			<div id="SignUpLink">
+			<div id="sing-up-link">
 				<p>New User? <a th:href="@{SignUpPage}">Sign Up</a></p>
 			</div>
-
 		</div>
-
 	</div>
-
 </body>
-
 </html>
